Fix Dark Mode Bootstrap Icon colors

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 }
 
 svg.bi {
+    fill: currentColor;
     width: 1em;
     height: 1em;
 }
